adding test-api

--- a/k8s/namespaces/video-hearings/kustomization.yaml
+++ b/k8s/namespaces/video-hearings/kustomization.yaml
@@ -9,3 +9,4 @@ resources:
 - vh-video-api/vh-video-api.yaml
 - vh-azure-devops-agent/vh-azure-devops-agent.yaml
 - vh-bookings-api/vh-bookings-api.yaml
+- vh-test-api/vh-test-api.yaml
