--- a/k8s/namespaces/video-hearings/vh-notification-api/vh-notification-api.yaml
+++ b/k8s/namespaces/video-hearings/vh-notification-api/vh-notification-api.yaml
@@ -12,4 +12,4 @@ spec:
   chart:
     git: git@github.com:hmcts/vh-notification-api
     path: charts/vh-notification-api
-    ref: helm_chart_setup
+    ref: VIH-7296-helm-setup
