--- a/k8s/namespaces/video-hearings/kustomization.yaml
+++ b/k8s/namespaces/video-hearings/kustomization.yaml
@@ -10,3 +10,4 @@ resources:
 - vh-azure-devops-agent/vh-azure-devops-agent.yaml
 - vh-bookings-api/vh-bookings-api.yaml
 - vh-test-api/vh-test-api.yaml
+- vh-notification-api/vh-notification-api.yaml
