--- a/k8s/namespaces/neuvector/patches/stg/cluster-01/neuvector.yaml
+++ b/k8s/namespaces/neuvector/patches/stg/cluster-01/neuvector.yaml
@@ -16,6 +16,31 @@ spec:
           host: neuvector01-api.staging.platform.hmcts.net
         configmap:
           data:
+            samlinitcfg.yaml: |
+              SSO_URL: https://login.microsoftonline.com/531ff96d-0ae9-462a-8d2d-bec7c0b42082/saml2
+              Issuer: https://sts.windows.net/531ff96d-0ae9-462a-8d2d-bec7c0b42082/
+              X509_Cert: |
+                -----BEGIN CERTIFICATE-----
+                MIIC8DCCAdigAwIBAgIQftgSDMtrdqdK+45Ez++0DDANBgkqhkiG9w0BAQsFADA0MTIwMAYDVQQD
+                EylNaWNyb3NvZnQgQXp1cmUgRmVkZXJhdGVkIFNTTyBDZXJ0aWZpY2F0ZTAeFw0yMTAyMTYxMDEx
+                MDVaFw0yNDAyMTYxMDExMDVaMDQxMjAwBgNVBAMTKU1pY3Jvc29mdCBBenVyZSBGZWRlcmF0ZWQg
+                U1NPIENlcnRpZmljYXRlMIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAtCyc3LvRUu/4
+                ZFtZ8A0tZAyo13MWh2X2wTduBBLgH17i1MeGEOjumpkpxWR7tReLaWl+c5m1WTfUmqqknu2QTq/0
+                fB3hYhTJmRimsMgNShsPRTFgYt95OCB/0LF/s6p1KpXRK+rotPPCiV0XFgaUBAC0F35USoLfwzeK
+                InAlayq1bBrjx0+AcmNyucuiBQZS6mPtQUtvGKP7zeVDKCeuL5WyrwYDH36p22Ixtcnf+ZYJCT63
+                s/CDkABKgpmpMNHU9/3RNFo9hD2qDXTW9CnnoeVCeybGKl8GO6kogchQ2WEfz+NwkmVAPYQDoiYP
+                UNlNZrVZySoz2LRIu/x++ae06QIDAQABMA0GCSqGSIb3DQEBCwUAA4IBAQAvVQpPONIRjJDDGkEO
+                HkrefEyc2q7Ilb/PHNGoYxqHTT3geYHCyvlpTSFfltRseKwFUr6usstfkP/bbV+sr1yJBNFmExkv
+                KXPw8twyVQnsQWMVwHysuN/qemEjgJq3OUCanaeUp7oZMsVhTCkLulL2xkzqpyo+c4aunw6r4ZR6
+                f2AwdRSDOk1Dr2mZaZD/h3lDdSW3sPmmzZ+tMlFYQinjWeGcAXINlC2CrZvkHLuoAqXppWVA96Ml
+                CaAJrIpUWkWRQT0dOaDCOax/VYo1kqY3uG8G3YlPyg3yAxWIq0um516ka3NhNz1+gn0/mqjFC0qm
+                lBQgnMctCDnZZSvfjl6n
+                -----END CERTIFICATE-----
+              Enable: true
+              Default_Role: reader
+              Role_Groups:
+                admin:
+                  - e7ea2042-4ced-45dd-8ae3-e051c6551789
             sysinitcfg.yaml: |
               New_Service_Policy_Mode: Discover
               Syslog_ip: fluentbit-log
