adding vh-admin-web

--- a/k8s/namespaces/video-hearings/kustomization.yaml
+++ b/k8s/namespaces/video-hearings/kustomization.yaml
@@ -11,3 +11,4 @@ resources:
 - vh-bookings-api/vh-bookings-api.yaml
 - vh-test-api/vh-test-api.yaml
 - vh-notification-api/vh-notification-api.yaml
+- vh-admin-web/vh-admin-web.yaml
