--- a/k8s/namespaces/video-hearings/vh-admin-web/vh-admin-web.yaml
+++ b/k8s/namespaces/video-hearings/vh-admin-web/vh-admin-web.yaml
@@ -12,4 +12,4 @@ spec:
   chart:
     git: git@github.com:hmcts/vh-admin-web
     path: charts/vh-admin-web
-    ref: helm_chart_setup
+    ref: VIH-7247-admin-web-sds
