--- a/k8s/namespaces/neuvector/patches/stg/cluster-00/neuvector.yaml
+++ b/k8s/namespaces/neuvector/patches/stg/cluster-00/neuvector.yaml
@@ -13,7 +13,7 @@ spec:
           shareName: neuvector-data-00
         ingress:
           enabled: true
-          host: neuvector00-api.staging.platform.hmcts.net
+          host: sds-neuvector00-api.staging.platform.hmcts.net
         configmap:
           data:
             samlinitcfg.yaml: |
@@ -21,20 +21,20 @@ spec:
               Issuer: https://sts.windows.net/531ff96d-0ae9-462a-8d2d-bec7c0b42082/
               X509_Cert: |
                 -----BEGIN CERTIFICATE-----
-                MIIDBTCCAe2gAwIBAgIQN33ROaIJ6bJBWDCxtmJEbjANBgkqhkiG9w0BAQsFADAtMSswKQYDVQQD
-                EyJhY2NvdW50cy5hY2Nlc3Njb250cm9sLndpbmRvd3MubmV0MB4XDTIwMTIyMTIwNTAxN1oXDTI1
-                MTIyMDIwNTAxN1owLTErMCkGA1UEAxMiYWNjb3VudHMuYWNjZXNzY29udHJvbC53aW5kb3dzLm5l
-                dDCCASIwDQYJKoZIhvcNAQEBBQADggEPADCCAQoCggEBAKGiy0/YZHEo9rRn2bI27u189Sq7NKhI
-                nFz5hLCSjgUB2rmf5ETNR3RJIDiW1M51LKROsTrjkl45cxK6gcVwLuEgr3L1TgmBtr/Rt/riKyxe
-                XbLQ9LGBwaNVaJrSscxfdFbJa5J+qzUIFBiFoL7kE8ZtbkZJWBTxHEyEcNC52JJ8ydOhgvZYyket
-                e8AAVa2TZAbg4ECo9+6nMsaGsSBncRHJlRWVycq8Q4HV4faMEZmZ+iyCZRo2fZufXpn7sJwZ7CEB
-                uw4qycHvUl6y153sUUFqsswnZGGjqpKSq7I7sVI9vjB199RarHaSSbDgL2FxjmASiUY4RqxnTjVa
-                2XVHUwUCAwEAAaMhMB8wHQYDVR0OBBYEFI5mN5ftHloEDVNoIa8sQs7kJAeTMA0GCSqGSIb3DQEB
-                CwUAA4IBAQBnaGnojxNgnV4+TCPZ9br4ox1nRn9tzY8b5pwKTW2McJTe0yEvrHyaItK8KbmeKJOB
-                vASf+QwHkp+F2BAXzRiTl4Z+gNFQULPzsQWpmKlz6fIWhc7ksgpTkMK6AaTbwWYTfmpKnQw/KJm/
-                6rboLDWYyKFpQcStu67RZ+aRvQz68Ev2ga5JsXlcOJ3gP/lE5WC1S0rjfabzdMOGP8qZQhXk4wBO
-                gtFBaisDnbjV5pcIrjRPlhoCxvKgC/290nZ9/DLBH3TbHk8xwHXeBAnAjyAqOZij92uksAv7ZLq4
-                MODcnQshVINXwsYshG1pQqOLwMertNaY5WtrubMRku44Dw7R
+                MIIC8DCCAdigAwIBAgIQGlm/yJRkCp9DhnZZuVrJPjANBgkqhkiG9w0BAQsFADA0MTIwMAYDVQQD
+                EylNaWNyb3NvZnQgQXp1cmUgRmVkZXJhdGVkIFNTTyBDZXJ0aWZpY2F0ZTAeFw0yMTAyMTYxMDA0
+                MzlaFw0yNDAyMTYxMDA0MzlaMDQxMjAwBgNVBAMTKU1pY3Jvc29mdCBBenVyZSBGZWRlcmF0ZWQg
+                U1NPIENlcnRpZmljYXRlMIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEA3wa79Pv/5Uin
+                e+EspbtMK/v9fDZukAK4sI3kbgZeV08F4XJ434srzhs0M9bDik3pjxcs/sE24ykIw+bVe1BVpOfb
+                M0AA3KlpV/4wQ/TIHBMj92+NadI5cGwUcmfdFCJDbUhv5lkxWxe7FL3YTcA0Fs85IFLfgMMd1l0I
+                GmuPaJIhZRnqlNM0AgK9eNdcth3jJNiQStlVCDGfdw82nslppTmOHQGKJJnrlYcXdXjJDg9kidFS
+                V9hEdiOZ+c+6O3u56/IoMZT3uIEnmidDZMWnDoaDcw7xcrtynZL9vGM/UlBv/STSKWzMcXf1QIEK
+                sAYwHb56/6iQ8Uw1ZhapfGKb0QIDAQABMA0GCSqGSIb3DQEBCwUAA4IBAQC76ifYGPqFNT635iry
+                ebgHz/1KJ4+wryvawncoZ8+74Bum5wK/9/K3IbznbL/+p6w9L7m5lcaRTzaCa9VEVZz9ED2u86Bk
+                kCu0GB/70LKl1fIScBXR+06olqhSay8pE0K1oLQvj9F1Xug0O0Ers595cqMRhNPdZSFA9AttIJzz
+                nlwthw3bcG6fE+tDsjtwHzPK96qoh+rwjAP6vL6Ng10Zyn/Tzhy60QnctexqD/47vThqshX/PWeX
+                aWLsa+4n0CXUfb+5SMjZlF0/UCYeP3ej3kJ/7Wc3TXwy7z0k7f3k5fSDFTnKg5htV1zWPaeEWijE
+                YfOMOQ1JgLdRcLLVbL8h
                 -----END CERTIFICATE-----
               Enable: true
               Default_Role: reader
@@ -54,8 +54,8 @@ spec:
                 - security-event
                 - audit
               Syslog_In_Json: false
-              Cluster_Name: stg00
+              Cluster_Name: sds-stg00
       manager:
         ingress:
-          host: neuvector00.staging.platform.hmcts.net
+          host: sds-neuvector00.staging.platform.hmcts.net
           enabled: true
