adding service-web

--- a/k8s/namespaces/video-hearings/kustomization.yaml
+++ b/k8s/namespaces/video-hearings/kustomization.yaml
@@ -12,3 +12,4 @@ resources:
 - vh-test-api/vh-test-api.yaml
 - vh-notification-api/vh-notification-api.yaml
 - vh-admin-web/vh-admin-web.yaml
+- vh-service-web/vh-service-web.yaml
