--- a/k8s/environments/ithc/common-overlay/toffee/flux-patch.yaml
+++ b/k8s/environments/ithc/common-overlay/toffee/flux-patch.yaml
@@ -23,4 +23,4 @@ metadata:
 spec:
   values:
     java:
-      image: hmctspublic.azurecr.io/plum/recipe-frontend:prod-0968f786
+      image: hmctspublic.azurecr.io/plum/frontend:prod-6fa89931
