Fix secrets names

--- a/k8s/environments/dev/common/neuvector/fluentbit-log.yaml
+++ b/k8s/environments/dev/common/neuvector/fluentbit-log.yaml
@@ -1,12 +1,12 @@
-apiVersion: ENC[AES256_GCM,data:mxc=,iv:dHTogenh8b4ZVEbUl++CtmSU/M43/5BrAT0GtLEioqo=,tag:vU3Z00tkajF+fxGLSDUewA==,type:str]
+apiVersion: ENC[AES256_GCM,data:oOk=,iv:3kVxTNZSiEjCLZQAtWUF6irLU5SsUbcJefiMTAwm4Sw=,tag:RWC/CRr1dW419gOEi4sHPQ==,type:str]
 data:
-    azure_log_workspace_id: ENC[AES256_GCM,data:fkV/1yAfYiYj/utXnyWasUCFnCpJBQEKWp8wjMmPLdHUywXifMfbOmW7aQZ6h3c4,iv:N/yKuHmPnVnCICZdjZlIg7tY86UR7cY1IUzHVsUmS/E=,tag:4HpBubHiXHtaj/Ep6cihow==,type:str]
-    azure_log_workspace_shared_key: ENC[AES256_GCM,data:3lrpL8SGhZAYLpviIboG2UZrThqqa9sgGSMdeT3eYaXpvz1JbsJAkv2KwtGTIStNuNGRsmLGBG3KqSfQ5P4esdzVglDeLnMiFfs+m4ZyfK5GwXIBptxeLcMEemdAvHqKCeK7vqA1Er5hBOAuvwju77/JKuTgGqtw,iv:dAX9tzofk4LnbSRocv65GvVyCapjA4jOzV5EoxrH7BQ=,tag:uFs+HsxDM3WjMINSsTmaDw==,type:str]
-kind: ENC[AES256_GCM,data:VHAbllMO,iv:OMUC2v9o3qmtTJEHl7d/+EvYLPhQ0FUVsqZfgVDU0ZA=,tag:lDJvYYa4w4ji2E8IiAxZCQ==,type:str]
+    azure_log_workspace_id: ENC[AES256_GCM,data:E+HbgbKRNI7BJpu6PRCZQR+xKvmqSVmQ2RpFyrgE25IVGMB1RDqG3eV8rbp9p9Mt,iv:Mx+ByO6E7hCxrMc7QEoa88Gi7Vj7KHF2RvVtAZWUSEE=,tag:xSJsZ8gGcge381hyn9S7Hg==,type:str]
+    azure_log_workspace_shared_key: ENC[AES256_GCM,data:JnlsKPvEaA4AsSQCxWvGCp+ws4c3T6NyLck7P2XaPNfocvIofX7pgwndakmedqZ5jdXQXJu/z0ODp1EbEEfR7NtguYtMnMpK/BBybsNbNZDfQ9wx/hUUGiaO+YbeJVHAhQ8RLzWkL46JVNA3TL974mOwbL9jn5hM,iv:A/QZ5qw6wryEB6GiXOOkTRO7z8Vo7SQZvmn7LGA7b+0=,tag:pfDGlEdcVemJvp0Swiv8cw==,type:str]
+kind: ENC[AES256_GCM,data:e+x+TLGe,iv:o72RsK+91X29TI85ej56SmkC0MAc4P9rFzPZcGlS3jI=,tag:6sYO58Ig4OLwN44mo0Bx3w==,type:str]
 metadata:
     creationTimestamp: null
-    name: ENC[AES256_GCM,data:/4WtbtpSl6qI2YiVJQy9CQ==,iv:DmIdjPuJiAQXJ2+fX8z2LQ21QgoDDt73hMqzQ3/nfzs=,tag:R+qx37bES6wxLwiDr4Z7ww==,type:str]
-    namespace: ENC[AES256_GCM,data:/RrWj9hZCaTe,iv:ux/zodf0aChWKCxm7UXD4kZriv6PDMUjD0BkEFyGrLE=,tag:FAVjJ31ZD30Q9aZFUrhByg==,type:str]
+    name: ENC[AES256_GCM,data:CfqdoqyKuGCI5tpfuQ==,iv:FASSKVmt0YeyeGTay62jB08QWBVO6VbIyRltmyOYPEo=,tag:EKTj2BAYFVmHoYLVprLU6g==,type:str]
+    namespace: ENC[AES256_GCM,data:6hWyJlZ9Q1yu,iv:uqxw+tZs8mxUXJVx2r/VjpWW3cTaRZ2NjcLvUBZLP7M=,tag:rjZFSQQXBu/Ox+1yHoJ4Qw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -14,11 +14,11 @@ sops:
     -   vault_url: https://dtssharedservicesdevkv.vault.azure.net
         name: sops-key
         version: 2beba064ddfe454482ad0133af2cf0fd
-        created_at: '2021-02-19T15:58:58Z'
-        enc: C_YCeEvEiIk8Pf2N_lDaEnv-oIVRTdO24eXbvEdeVhC6BKv-am_AkdWU7PhpkmHPbz_jyhQsmZe6JJKOeBIowLbzkxLWn4Truuq2SCB0Prokv-jSEwizNJj1mif86oxOKrFxV73V4HHfzGnMkjTIbRiRywZzdHr5090A2aZsJLN4x8OLcspSs2U1dKqltMOgIpn8NUJHApAIkIJRPKpRVszlKZG9zzlvW_PrcUUe7hK4wORzhEUctzoVPxdh2FDwRF0BBvD9UDANqDMAP2Ket8HZbHJeX9_e6xYmW-Pj4JrC3QMxFepvTNpplE-ngCm0MHYx3asO4G9HLoYe_glt9Q
+        created_at: '2021-02-19T17:26:26Z'
+        enc: f4yecs-xk-obCDU6OUTRc-r-XBM4M5StRCHQP2X7sqNEMP1p66lAJHoZqNLmctOyIpebIr1fRIrsj60FCp4I6GZzVkiOy7tpdkCvTUGzcLJkHjJw616t5iTug9OEoRLaZyGeIkPTsrAQPtLRW2SS-PhfWPlnBWOy3AdtV9O-ZJaqtLcb_eOGjGjuuyiR49VcwNKey0xBmtjalmDefq_MR0h4okiFWLTdCf-HgdYBOGk6-8-2xQMrGMXyFHPP0MguWyihj2wjTGXkOBdmTxsb12VrNM_BILt8aUsNE-iSTqLHSP3DlQD2YKlE6QUyHkPe4rtq0zSi4bA5276AQ99VEw
     hc_vault: []
-    lastmodified: '2021-02-19T15:58:59Z'
-    mac: ENC[AES256_GCM,data:62sf80M3S6e+vlr/mtUpDbxAUvLkQPuTJxA341sbAiwUscpvPWM/vWgaWk0wSVRgY+VJp/FWEyxjJ3S5SuqWmIXRQk8WbHgucV2Yj9DzDpTGXJGLvUYwVg1ArlUS28HlSPDGZpkndSsTyMNkIU0bJ9Iu9u9O0kSszchAzT7e35k=,iv:B+kMV0AGSV/KISATKxS0fqyzSTM6wGlNu6Rb+Khagtg=,tag:4xKjVxllIs25rCIRKsXTMQ==,type:str]
+    lastmodified: '2021-02-19T17:26:28Z'
+    mac: ENC[AES256_GCM,data:lWASkzjRVixeqSUqT4gisqy3Af6X4lNVVAXbfGjExKzyf5Ddc+HYB652YVL2hlg5DnpJlk6eKp/E0+A+yM9O4qVW9rPo2/wp0bJe2uWklP9OjVGm5qNvcKuvh2Vfq97mHAXJDlFubhXEbs9LouvzbVgjq06xIztvTq0exhkw0oM=,iv:pJjZvjiKUR1RX9ZdM40K2JiRjeyI3OWoaJgP26CwPSg=,tag:2spmI0JBHclRxVOjw7nIxA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.6.1
