--- a/k8s/environments/dev/common/neuvector/nv-storage-secret.yaml
+++ b/k8s/environments/dev/common/neuvector/nv-storage-secret.yaml
@@ -1,12 +1,12 @@
-apiVersion: ENC[AES256_GCM,data:ewg=,iv:nlLh29GNEnbmvRyPuYbUFbCwvV8JLAo+yqjN9xXG5zQ=,tag:ikOgF8V4GGmMc3C6bU+JqA==,type:str]
+apiVersion: ENC[AES256_GCM,data:JzI=,iv:YTpUFSoZKUEFgwqSV/+JUMIR3IAulS5Yid3rH6I7fbY=,tag:7KOv454w5rmJfa9gG/hbpw==,type:str]
 data:
-    azurestorageaccountkey: ENC[AES256_GCM,data:yJKGGCK1g3WsIOGU1Cg3ldsLn4CGn1djjrcQJ95Ywc6RsG/fvSCTpqKJSXQdQEyslsUOwdXqpJ7lG4lYRHq6rZsM7NrPGTD9R0QjkG1Mb7f8X5OlbtC1GDtbcQKF/WMhk+/7gbZ5iDLgHxOg/l5w0NBqt6AANrMe,iv:Cz6887AEqCSGdOqqfq2/kLbieMdpcDSdGrFf2SnmfUA=,tag:Xjx4hezf2QD3m1Lm3k8Yjw==,type:str]
-    azurestorageaccountname: ENC[AES256_GCM,data:SPTbmlM2Dl2zxRz7VcVuk5A3AIg=,iv:Y9cbBmiSTk3r/DLSZYMfoq/+NR/UalaGPoTcfRmU20I=,tag:VTkfe0gKllVlwwTD2YtIMA==,type:str]
-kind: ENC[AES256_GCM,data:TSUpHrdk,iv:fcwL1v2Fd/X3S6VYKBEaWopZT6Q0PEXAgOTFVJvg21I=,tag:9xYdmW1uvTJ7IGzhaQCN8w==,type:str]
+    azurestorageaccountkey: ENC[AES256_GCM,data:7Z9AUGGygGyapufdb9wQt3D2skskfPwGp0ZERAg4VZ6IO6AvX9M2YNA7DuX94c2zsSC83FoZ0oa7c6h4RW8jl+QPw7pnSIH6yDXcMAXksr3GaTQfzQY5y/yROd1aBKkDjZHvConx6kty4jyYwqaoLWe7t/SppDGg,iv:qe5kuYA1pHbipz9PN79zhU0wxUBwiM6PUpePsLSfIA4=,tag:DoB9jT70Y87xkWdyn0uo6g==,type:str]
+    azurestorageaccountname: ENC[AES256_GCM,data:LxXYz0ZYvAg+rBQzKoP6C4MhOmU=,iv:bQuSFWfyac3YZL95XyK/31t4nMCjdPHu9Op32unksyI=,tag:HLF5qR8ARCiEtb845Q0Tmw==,type:str]
+kind: ENC[AES256_GCM,data:611A9YO4,iv:dWqXEBSYjVjZrkUuj3DnyxjWwmU+bEScPr0vXJTtRZI=,tag:IUuVJCKJVweGeXEnvC4GMQ==,type:str]
 metadata:
     creationTimestamp: null
-    name: ENC[AES256_GCM,data:wyQ3lMhYqVOGO55QWKbbVA==,iv:K2KyIqj0Fk/6+O0Zcc6MMefGrQuuOPbmZiWYuw3ZWSs=,tag:Ze7NJEEaAGT3DL7II1qZ5w==,type:str]
-    namespace: ENC[AES256_GCM,data:iIbelEkNcLvS,iv:5AQ8dd/ph5G+u6TR8MFJQVMaX4YQ57hnWvceE8C6Y40=,tag:pmBdiG7rGKAGchtRKRaMLw==,type:str]
+    name: ENC[AES256_GCM,data:FJa9Fhq0R3vmsnsyXxAIb1U=,iv:VOnqPzQm8juUfYc9c7KA8seviqut4DbNqUK36nrtZkA=,tag:Cpz+ud5Rs0FFyNjLzllwXg==,type:str]
+    namespace: ENC[AES256_GCM,data:BAFP07o4Vcty,iv:27FsMsrlpPIVs1v0KmGT1KVjy7zSxoRzTYPYN8ZtgPA=,tag:hClbphV/DImG1sCNHUSTNw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -14,11 +14,11 @@ sops:
     -   vault_url: https://dtssharedservicesdevkv.vault.azure.net
         name: sops-key
         version: 2beba064ddfe454482ad0133af2cf0fd
-        created_at: '2021-02-19T15:33:05Z'
-        enc: MHyhBlu8IDbyrxFufIVBgLSHDuaNoih5UVoi7sSl5Q3fpTLe_BLG-GYlAFao0D8YZgxrEVad7cnRhbdtiyyqXSmCbFEEB0X4_O0ohcdqhDdys_JZfFhcsldaJddKsUtSxpRKZRkmkxwNGmeIX128PgEsIY-H7bTjX-gzxkhfdOst0MjO4urmdV6xH0GKTGWHNJnq-uNogSpCAoVDFmbTD2BgwwBp2VLZpiaCdkdNsu4g7ZvMHAV5NSnrA70FXfK_51Bhr--vBeRcr_hHWhQOb4t1ESAFrFJMOy4rwSUYSKUpLjuD4ewUauJi21JrsX9rZi5wz2MNIDq_GKu8fTKq3A
+        created_at: '2021-02-19T17:27:18Z'
+        enc: at1FCyUuWK2BHE10qM6ZGNVajnIKJVKmrRa286uThMUFRmsgAI-jy6N9cG0o0Z_MDAaYlF-C63r8yfzvB1maFfsELr7ZbQjL2P1KeIYhHN6Sdxl-IzPC3Wa9y0GWwUvtXIj692wUHrUracOaPNLUUm3jvDmrkiO3eabteqfzIp9mEXo93r6vzLRWnIGNmJLKH1jjotWq5ARdd2X1rAREhyEcywuHWMwe9spnyrF4lP4baZd4ACSwT_SWjwecMmjdUGHvIVvwWLO8eIwchwhOQGbufEYLXZ5hAXwtOAinSaiYatE1OTGcW4MyjVD4OqB6IskSIUzaqHiAETmIOFsS-Q
     hc_vault: []
-    lastmodified: '2021-02-19T15:33:07Z'
-    mac: ENC[AES256_GCM,data:WuXjY8vsEstgZNBrNCM00ijFRdbenOUwnrcjTbG7cZaYXZz5S0DXyg28+q2nnd6c8k/OQuXTWn1GoRJXfncEFJbZF8uJj+8krNBw2Y/vvEfg81UKrb8zjSOVJPnECnRyJAoJbJAN98lDDXeZwp7aHgzR87VGkjKbJT0k7+T2roQ=,iv:Us7VR4qbRFp6aYr0sPpX7RLNFPE/PBlKZQVBTsz78SE=,tag:8RjQc12SADxF0TxlxbdTgw==,type:str]
+    lastmodified: '2021-02-19T17:27:19Z'
+    mac: ENC[AES256_GCM,data:VioNRY1cumkhxaZYNmqOPATcusEkaVOZ3JgxDzuxK1wgviWLdCTu2yi+4kRxF/SxVywa1Ki+Iqa0Py1q32sZZy6mBv5DcYzYyGIhs6k0eRAxon2Ax3VUHNhs2fp+N8QhhnIBzakgLC/Gv5jlaT5QWYtBN52J0bBmZqW1qGlZSak=,iv:h/QwL+cmozp5xsDutZ0ohUiV1urUvS4JEO9HVcR2mJc=,tag:RellAG7GHlo0ynUwNPK6xQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.6.1
