Fix mailrelay rules dev-00

--- a/k8s/namespaces/neuvector/patches/dev/cluster-00/neuvector.yaml
+++ b/k8s/namespaces/neuvector/patches/dev/cluster-00/neuvector.yaml
@@ -44,12 +44,12 @@ spec:
           update: '{"config":{"id":7,"comment":"","from":"AllPods","to":"Mta","ports":"tcp/25","action":"allow","applications":[],"disable":false}}'
         - create: '{"insert":{"after":7,"rules":[{"id":8,"comment":"","from":"AllPods","to":"Idam","ports":"tcp/443","action":"allow","applications":["SSL"],"disable":false,"learned": false}]}}'
           update: '{"config":{"id":8,"comment":"","from":"AllPods","to":"Idam","ports":"tcp/443","action":"allow","applications":["SSL"],"disable":false}}'
-        - create: '{"insert":{"after":8,"rules":[{"id":9,"comment":"","from":"MailRelay","to":"Office365Connector","ports":"tcp/25","action":"allow","applications":["Any"],"disable":false,"learned": false}]}}'
-          update: '{"config":{"id":9,"comment":"","from":"MailRelay","to":"Office365Connector","ports":"tcp/25","action":"allow","applications":["Any"],"disable":false}}'
-        - create: '{"insert":{"after":9,"rules":[{"id":10,"comment":"","from":"AllPods","to":"Office365Connector","ports":"tcp/25","action":"deny","applications":["Any"],"disable":false,"learned": false}]}}'
-          update: '{"config":{"id":10,"comment":"","from":"AllPods","to":"Office365Connector","ports":"tcp/25","action":"deny","applications":["Any"],"disable":false}}'
-        - create: '{"insert":{"after":10,"rules":[{"id":11,"comment":"","from":"AllPods","to":"MailRelay","ports":["tcp/25", "tcp/8025"],"action":"deny","applications":["Any"],"disable":false,"learned": false}]}}'
-          update: '{"config":{"id":11,"comment":"","from":"AllPods","to":"MailRelay","ports":["tcp/25", "tcp/8025"],"action":"deny","applications":["Any"],"disable":false}}'
+        - create: '{"insert":{"after":8,"rules":[{"id":9,"comment":"","from":"MailRelay","to":"Office365Connector","ports":"tcp/25","action":"allow","applications":[],"disable":false,"learned": false}]}}'
+          update: '{"config":{"id":9,"comment":"","from":"MailRelay","to":"Office365Connector","ports":"tcp/25","action":"allow","applications":[],"disable":false}}'
+        - create: '{"insert":{"after":9,"rules":[{"id":10,"comment":"","from":"AllPods","to":"Office365Connector","ports":"tcp/25","action":"deny","applications":[],"disable":false,"learned": false}]}}'
+          update: '{"config":{"id":10,"comment":"","from":"AllPods","to":"Office365Connector","ports":"tcp/25","action":"deny","applications":[],"disable":false}}'
+        - create: '{"insert":{"after":10,"rules":[{"id":11,"comment":"","from":"AllPods","to":"MailRelay","ports":["tcp/25", "tcp/8025"],"action":"deny","applications":[],"disable":false,"learned": false}]}}'
+          update: '{"config":{"id":11,"comment":"","from":"AllPods","to":"MailRelay","ports":["tcp/25", "tcp/8025"],"action":"deny","applications":[],"disable":false}}'
     groups:
       - '{"config":{"name":"AzurePostgreSQL","criteria":[{"key": "address", "value": "*.postgres.database.azure.com", "op": "="}]}}'
       - '{"config":{"name":"ApplicationInsights","criteria":[{"key": "address", "value": "dc.services.visualstudio.com", "op": "="}, {"key": "address", "value": "rt.services.visualstudio.com", "op": "="}, {"key": "address", "value": "dc.applicationinsights.microsoft.com", "op": "="}, {"key": "address", "value": "euw.rt.prod.applicationinsights.trafficmanager.net", "op": "="}]}}'
