adding dev environment and renaming files

--- a/k8s/namespaces/video-hearings/kustomization.yaml
+++ b/k8s/namespaces/video-hearings/kustomization.yaml
@@ -13,3 +13,5 @@ resources:
 - vh-notification-api/vh-notification-api.yaml
 - vh-admin-web/vh-admin-web.yaml
 - vh-service-web/vh-service-web.yaml
+- vh-booking-queue-subscriber/vh-booking-queue-subscriber.yaml
+- vh-scheduler-jobs/vh-scheduler-jobs.yaml
