--- a/k8s/environments/sbox/common-overlay/video-hearings/kustomization.yaml
+++ b/k8s/environments/sbox/common-overlay/video-hearings/kustomization.yaml
@@ -2,4 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - ../../../../namespaces/video-hearings
-- vh-user-api-identity.yaml
+- vh-aad-identity.yaml
