removing azure devops

--- a/k8s/namespaces/video-hearings/kustomization.yaml
+++ b/k8s/namespaces/video-hearings/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
 - vh-user-api/vh-user-api.yaml
 - vh-video-web/vh-video-web.yaml
 - vh-video-api/vh-video-api.yaml
-- vh-azure-devops-agent/vh-azure-devops-agent.yaml
+#- vh-azure-devops-agent/vh-azure-devops-agent.yaml
 - vh-bookings-api/vh-bookings-api.yaml
 - vh-test-api/vh-test-api.yaml
 - vh-notification-api/vh-notification-api.yaml
