updated sealed secrets with correct storage account names

--- a/k8s/environments/test/common/neuvector/nv-storage-secret.yaml
+++ b/k8s/environments/test/common/neuvector/nv-storage-secret.yaml
@@ -1,12 +1,11 @@
-apiVersion: ENC[AES256_GCM,data:gpo=,iv:F4HuwIkS5fhoRhvO4kUlEt2Zqjp35ccTCxcRfdfnNw0=,tag:GlOoTD0lIeOLm3H4ZZpVTg==,type:str]
+apiVersion: ENC[AES256_GCM,data:L3E=,iv:mGbRrnyrCQdp9VqLFAs2iKeU2ja5mw5n9eHZaT8vfMU=,tag:0BJEKS6Ll2/RXfzLdx8VjQ==,type:str]
 data:
-    azurestorageaccountkey: ENC[AES256_GCM,data:0SHuL8OvtToOQygKeUx73avR3OvDkdc8ktza3Vm8vTw6h8P+7ndtQjLrDQfZ5SlJcinuBhyAinLDlVKV3XWWWkRQb75twBgKdc9nlEs74/ptKymd83arMKhp2pQyX7MVr4gctVgRwBuXAO05T8h2Zv9iFlV/hr5m,iv:N5Funy3/bFCWAWm+NZf+VPuT4EAWRZ+VvltU6XOHWlQ=,tag:LE79J4Urz0TfX0Jl4xWttw==,type:str]
-    azurestorageaccountname: ENC[AES256_GCM,data:eO5nrEMa+pof2tlGfpPPWzSz314X9jzk,iv:aHei/Z+yvR9wS8dsz37sqlyIDoi3gOoKljVbyjSYLfI=,tag:gvVqRiSNCvO9seTovmlQYw==,type:str]
-kind: ENC[AES256_GCM,data:p35haQxc,iv:VivFDRshNKCzhcsVOlP877hSBHG/vHYQNHfLGd2Bl8s=,tag:mLZdHLTzAA0TEzpLkHOQmA==,type:str]
+    azurestorageaccountkey: ENC[AES256_GCM,data:GABF144ViG2kUzAvYPmubdQ+WQmFMZcPlf1JQsiSfFWnXkbu0cNaQWH7qeY9xGOCvKHpXfz4doBesrsnF43tu9J1zoFhNwYO9PmrEmGNpO8IcDh3Q58PGQPAxYUWXCILjlFjAX48g4vFVETT8K29Wtxs1Dl+xXwC,iv:QhAVJbzZttGVrNpS8aWnbnymx9q8s+XUSCcwyH5bzak=,tag:FDzgFgY9SJ5aTQ885ZFQEw==,type:str]
+    azurestorageaccountname: ENC[AES256_GCM,data:JDM8LPeApnGY6HfYGfZITJIhaapfGnRb,iv:J2j2A1iWtiqSWsk4oD/P2MlvPp/lI+oL2shlQc32+60=,tag:G05eMWAxELT93d5kAD2mWw==,type:str]
+kind: ENC[AES256_GCM,data:f0N0xcdf,iv:wdWzSa+3e5HwP1he/BdA892d3ze9PSvBGv9ZWo42IYM=,tag:/6Wj6TmNh9uS+mA4IEGDbg==,type:str]
 metadata:
-    creationTimestamp: null
-    name: ENC[AES256_GCM,data:8aBCkOx6YZBUMyU14c/jsOo=,iv:F1ymiiAtbC8d0ko1IJ7mepRN+Ed67ZAayDRc3tFffGE=,tag:sa23Bv84yxIYd36pxnGJAw==,type:str]
-    namespace: ENC[AES256_GCM,data:rd5SdMoQuhXW,iv:Nr3nPDluxCBVcVtQZSYC0PaVa3InWS06C6pMI//jFxs=,tag:f2yWPTNX5Lh1Gtligz5k7A==,type:str]
+    name: ENC[AES256_GCM,data:dab/+sKVlkmfvXW8Pv2ChLE=,iv:/EDeVFwShaq9QAZqfVjgTPSizj98Ppq5tBlYFvhDovY=,tag:ErEI3sCQjHD1Fpnkv1OYuA==,type:str]
+    namespace: ENC[AES256_GCM,data:5dy4EZRQpPE2,iv:+d9VH1dpGjGgfXMXNFz5UB6VV0pLQmsCnR93QDOK1cM=,tag:bH0BXkvUe+xGVnEYEswopg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -14,10 +13,11 @@ sops:
     -   vault_url: https://dtssharedservicestestkv.vault.azure.net
         name: sops-key
         version: 6d094e08ab7240ea8a64ec77f7f734b7
-        created_at: '2021-02-17T15:22:01Z'
-        enc: jhOKsKZZ5nvOMKVqcJZkFeF6IY3lqNjzXrC8f5ArIdEHjbF_RlWnLZp6F5wQAD74htFtPyHr1LY3j8Fj2SENrQWV74Usrqn_B7HaaYe7yek3wpIXb1E6bC4fhPkekLfyV30WQRMRv4ZLOcSsS0HtpuSeQ4hExiDcr4P8jUWK_xgw8sh7pYgZgYcVTxIE0s9Aom9oDoIoD_nSXhWRAoqq3DjAhdKtuwOqQfoQLeUPvJ6ugdT1YB-qTXUhyNBVVcW_vaVDNogN6EVILDafFLky2KJ16kA48R3aWXQo2YPSpL6Bic1I1bwu4zWt15JECArOUXgjDTf0N9ZTvIiV3LxB8A
-    lastmodified: '2021-02-17T15:22:05Z'
-    mac: ENC[AES256_GCM,data:94mxSm5SnSrYn+09CMpHfDUDoQ+npd2KzQT78AUrNGyhkFxX7sYV0SZh2v13lb0rcwulMsmp6CMUNCKe2wm2MV7EhZu1VmMhIXou0D09e2QrsYWAES3YDQpH+KvVwkBsfOsVxWRzqjTWI8d6dHyg4qvxd6YlV0hdMEXQcsLBQAQ=,iv:CV8GAGk0tJC0/phUsKCMmULmrcK9rAIZBI/LdE1r4RM=,tag:LB0aibKzhHLdEyElskrm6Q==,type:str]
+        created_at: '2021-02-28T21:43:53Z'
+        enc: vMILZ_Cmifst4nIgww7KHwgDBEoYfHdcSg6_ggp2cI1PUdILrc18Nlxxlg_sMBbkoUilZ3ThjrPbIESywKu9Ll_myaCriTlvODDO4hB-qbKj93P9RFCKZILeVxmZaxgyqnbljSmfCuec5xOB_12IZp__bOY8qamR758V5LWwV6YYl0D7Csh-9ezPdR_Qxi9GHEc3a9HcejXq800pPGlwYGxbZl3Iv_EGf7t8a8dQqyIaJgI9aWm8sHQwhGz_Qhh2IJI3HsTl5eJi4eVTvrHDiNJQS7R8ycIRwyROF_n7IburwfDbFmknha_MyAxObM7yBrRYUIM42E5O_zJp7h0mzg
+    hc_vault: []
+    lastmodified: '2021-02-28T21:43:54Z'
+    mac: ENC[AES256_GCM,data:rzwGfQVZAMwTgvhLXsghHDA5UTBPFT7nNgBtFnt/kTtv9395QGVC/3es6t0Bjw9dbLtqFcTq/058KTehsSOzU1BmqyHStl7kcTq0hlNCXwv2L40wu4R+5j66QiPthiF28U0uN0ctYnf4naQKXYUPeb+AOOkoWuDMAAbjXPYAV0k=,iv:TaSOAPwlpMEl61Lvfm0HaYwaWAqqGnApkYzVznNN290=,tag:Z9j1ZdW9tw1lZeR7KX3FKQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
-    version: 3.5.0
+    version: 3.6.1
