--- a/k8s/environments/ithc/common/neuvector/nv-storage-secret.yaml
+++ b/k8s/environments/ithc/common/neuvector/nv-storage-secret.yaml
@@ -1,12 +1,11 @@
-apiVersion: ENC[AES256_GCM,data:Z1A=,iv:eUC499uqxYD5yuC1neuGbN51jGMCYyuEzJWsRzAtysg=,tag:61upxK+7XSqMrirLx9tZLw==,type:str]
+apiVersion: ENC[AES256_GCM,data:iVA=,iv:aShb1H95XrqT5gczO6lGZbGMQqTHOb01u4rakGi7MV8=,tag:hXW4Byxu1uNly72qRL0ncA==,type:str]
 data:
-    azurestorageaccountkey: ENC[AES256_GCM,data:j+JOYkeLBvGmoIeJfuZi82uIVeqy1SZgPPBxPuOulsdBgO6gE/j8v6rYQNfXJ4ZXs/vgCUBhsRj2dKpRlcfzHgpJvDfOayuAFthfdBD2l0tKBYRjEAQP3rE1yOqbRa4gkaOFGMha7MFma5Z8g4l9Qf6eA2iJJnLQ,iv:xa0kzQbqM16xGiOVonQeLnWONL+ZotWrKNYXp+Ouxqk=,tag:szk95WjHAs/MiNHd4titGQ==,type:str]
-    azurestorageaccountname: ENC[AES256_GCM,data:M4efcF8w7BqeMVo0ZwvNyRXKWnHDZOuL,iv:Zsry1CIPo6cDrzjOGk4SQCsIXXzkwMTqy0oEpPrB/EE=,tag:XZydCZl1TaNdUQwMGNRX6Q==,type:str]
-kind: ENC[AES256_GCM,data:27GeI9Qk,iv:wmIHSx4/X+h4QOtGwsBsgsUSj4O0i/25285sFoVgTYQ=,tag:dkvCBTYMyMNByd8gcMQsNw==,type:str]
+    azurestorageaccountkey: ENC[AES256_GCM,data:TWj/CKx+wPFSWKXC5BhgiUfdXg1JdZNDewfmBiGR8r07Mx5Q/Dz85+7P3j+2NaICWQ7s1YgYOA8zyCsPayhaM0vWGKbqHXpKo/DcX+1ADztUv0+glzBy7rg3C6RUFlYaDANrObfTebgy5rhQe68o3YDRbuHrEYO/,iv:cSd6E+HyVON9m9cQBZo8gMzIDelJ+EDwIDmoM7XR8BQ=,tag:6BW3dPwbS0fv0kGIq0GxrQ==,type:str]
+    azurestorageaccountname: ENC[AES256_GCM,data:YGELGfjPN7Ja3ENZl47Ug1l/FqQ+Xd46,iv:K5bFYjdvpReXEd/RRrKTXr/XPqp7xh0iIGZpRd9tRb8=,tag:jdUmm2xY6s535llBm+nUcw==,type:str]
+kind: ENC[AES256_GCM,data:MB98qmlU,iv:uZVkn8xngMPcfnpuAq3/WFDj5L48sIyegAYmiBi1pfg=,tag:WL69tvZiC211hwEHOsu0YQ==,type:str]
 metadata:
-    creationTimestamp: null
-    name: ENC[AES256_GCM,data:HAFRHraMK3d327PiJeOx5HM=,iv:VnKm5GGDkmjB3wqiOQrmHvUSAuPhBhbHsiJvKljFxTs=,tag:BCOM7T6aXLdKSbs3NwbFuw==,type:str]
-    namespace: ENC[AES256_GCM,data:sJn8efwwPxEk,iv:4p8sUFfN6bfhPGrYRlFluCNnk//PErFmjStRlAmowl8=,tag:uNS2lOqaY7A+hVIMtCdoxQ==,type:str]
+    name: ENC[AES256_GCM,data:5HteqOSShoT2WKhOt1V9FwM=,iv:kShNJZx/n9OGZ3clGv2vsNxSTY/b2jgDq22B3P3740g=,tag:zd4rOCU6A9wfAZV9iH20wA==,type:str]
+    namespace: ENC[AES256_GCM,data:gLylNZCllFlV,iv:SOphFyGy2WEBkoV8H6f3fBxG6mn/B/nd4GtGets+k00=,tag:xOiade3YJwYQfWvWcYqYHg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -14,10 +13,11 @@ sops:
     -   vault_url: https://dtssharedservicesithckv.vault.azure.net
         name: sops-key
         version: 96812ee192044e6daabee8d3621b456f
-        created_at: '2021-02-17T15:17:12Z'
-        enc: dvS_Y1-mysyOAlZdtWEP_gDp_OqTWfYs_CHkrW7wIv80h_cMaJ81ohh5TobYgtySh0LlZA-uVPIPqC9mOTie4yIrl_22J1Xe2dzRO0jBES35_CMyt85GzP4eELTrcV4168hDerWUPppwGXSMC0qv7e-XC-HrOnM7FTPjl1pMDCE8C6ekPug1WBtm66tCp9z_aTCOrlSMeAj7VAin2OxwK1zOxjmDrSTJm40QQNRJ0AVHIkjfe1-Cw_s2L1Mx0WMA_EnI1GrvMxI1J_hUZvDma096dRwAaWpOj7CQAyLm3-ivCVo7ldxI9PoCGjPj0OxlcPg7SRuSfkBWuSXNfFZiEQ
-    lastmodified: '2021-02-17T15:17:16Z'
-    mac: ENC[AES256_GCM,data:k7cDNkZwoL5osKeHBYTYpU3RyBrb6G3VviljK5aF5WdyrWh0V4IANkTTmZ8fyl86nVL+K6nFJSzlZzYGoyGsTKzgKl7i8pCS+Q6WB77wVUHFgd6BAkvln8nnGapb6lGqqHf5eOa3hz03uKrFwPMC8MMbzDK+qbQkiV/27uNMaG8=,iv:ckx3oCiFilZMfJUd2q9sJ6PlsItuHkWVxoQe0V3S64Y=,tag:VY4kMU7Dbj8Eu7/To5QucQ==,type:str]
+        created_at: '2021-02-28T22:41:59Z'
+        enc: VOoT_EXFUu9DARk7B_wxgwZYe9m1e9DIkcPRXKexAI8vWzrYQSbpXnx3DtBzKo8-itoMJFgNxH636k1BJBbWXu7Ef6t0IAZkHD_JASROYdTTAvnc6ukNXCRfpHqtIx-eocG3OuAGp6xOSKta7AjU5wRWdeUAuc-5d2g-mY-VmZH_ZVwOlt0llOwfFIUlIYU0pPdZmfEmsUyucFSbljo1fjiVyYqNFXbJbHbRVm_8fNI4usEwn9FDq9OBnl_Z8NefqUSv7EuwEkeyVpJHpRH40X7GN339YCHrct_XHj0hMn5dXPT5wgNF6OZZFhyone0QV-d4vr935HCwZIdxzsOJrg
+    hc_vault: []
+    lastmodified: '2021-02-28T22:42:00Z'
+    mac: ENC[AES256_GCM,data:CWomYUu8yOoTTu22+RTzVkSUWyHqnDIA6MLziGLJqVs35VLEJJOg68xNbeBh9HeQlIXImT/88DK5LanWwN/zAtyvbTqil8w7qL/keUgUSNCwvbkCHOcge69XBDwLePlSgAm9Hh4nVpLQqxCS3SLJlQlHPW/fTE8HBgcQn/AufPw=,iv:RTkSE8G4eJ7Q1OwBlqPCxvw7RE4kQBjp6qQBhswYRe4=,tag:u3OCDoVj/CfWPpcIGa+beA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
-    version: 3.5.0
+    version: 3.6.1
