DTSPO-658 Ammend toffee-frontend.yaml

--- a/k8s/namespaces/toffee/toffee-frontend/toffee-frontend.yaml
+++ b/k8s/namespaces/toffee/toffee-frontend/toffee-frontend.yaml
@@ -17,4 +17,4 @@ spec:
       image: hmctspublic.azurecr.io/plum/frontend:prod-0968f786
       ingressHost: toffee.{{ .Values.global.environment }}.platform.hmcts.net
       environment:
-        RECIPE_BACKEND_URL: http://toffee-recipe-backend-java
+        RECIPE_BACKEND_URL: toffee.{{ .Values.global.environment }}-backend.platform.hmcts.net
