--- a/k8s/namespaces/neuvector/patches/dev/cluster-01/neuvector.yaml
+++ b/k8s/namespaces/neuvector/patches/dev/cluster-01/neuvector.yaml
@@ -21,20 +21,20 @@ spec:
               Issuer: https://sts.windows.net/531ff96d-0ae9-462a-8d2d-bec7c0b42082/
               X509_Cert: |
                 -----BEGIN CERTIFICATE-----
-                MIIDBTCCAe2gAwIBAgIQN33ROaIJ6bJBWDCxtmJEbjANBgkqhkiG9w0BAQsFADAtMSswKQYDVQQD
-                EyJhY2NvdW50cy5hY2Nlc3Njb250cm9sLndpbmRvd3MubmV0MB4XDTIwMTIyMTIwNTAxN1oXDTI1
-                MTIyMDIwNTAxN1owLTErMCkGA1UEAxMiYWNjb3VudHMuYWNjZXNzY29udHJvbC53aW5kb3dzLm5l
-                dDCCASIwDQYJKoZIhvcNAQEBBQADggEPADCCAQoCggEBAKGiy0/YZHEo9rRn2bI27u189Sq7NKhI
-                nFz5hLCSjgUB2rmf5ETNR3RJIDiW1M51LKROsTrjkl45cxK6gcVwLuEgr3L1TgmBtr/Rt/riKyxe
-                XbLQ9LGBwaNVaJrSscxfdFbJa5J+qzUIFBiFoL7kE8ZtbkZJWBTxHEyEcNC52JJ8ydOhgvZYyket
-                e8AAVa2TZAbg4ECo9+6nMsaGsSBncRHJlRWVycq8Q4HV4faMEZmZ+iyCZRo2fZufXpn7sJwZ7CEB
-                uw4qycHvUl6y153sUUFqsswnZGGjqpKSq7I7sVI9vjB199RarHaSSbDgL2FxjmASiUY4RqxnTjVa
-                2XVHUwUCAwEAAaMhMB8wHQYDVR0OBBYEFI5mN5ftHloEDVNoIa8sQs7kJAeTMA0GCSqGSIb3DQEB
-                CwUAA4IBAQBnaGnojxNgnV4+TCPZ9br4ox1nRn9tzY8b5pwKTW2McJTe0yEvrHyaItK8KbmeKJOB
-                vASf+QwHkp+F2BAXzRiTl4Z+gNFQULPzsQWpmKlz6fIWhc7ksgpTkMK6AaTbwWYTfmpKnQw/KJm/
-                6rboLDWYyKFpQcStu67RZ+aRvQz68Ev2ga5JsXlcOJ3gP/lE5WC1S0rjfabzdMOGP8qZQhXk4wBO
-                gtFBaisDnbjV5pcIrjRPlhoCxvKgC/290nZ9/DLBH3TbHk8xwHXeBAnAjyAqOZij92uksAv7ZLq4
-                MODcnQshVINXwsYshG1pQqOLwMertNaY5WtrubMRku44Dw7R
+                MIIC8DCCAdigAwIBAgIQa/YrD02lSLdFvt4OGR1lpDANBgkqhkiG9w0BAQsFADA0MTIwMAYDVQQD
+                EylNaWNyb3NvZnQgQXp1cmUgRmVkZXJhdGVkIFNTTyBDZXJ0aWZpY2F0ZTAeFw0yMTAzMDExNTA0
+                NThaFw0yNDAzMDExNTA0NThaMDQxMjAwBgNVBAMTKU1pY3Jvc29mdCBBenVyZSBGZWRlcmF0ZWQg
+                U1NPIENlcnRpZmljYXRlMIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAyN3eOVXVfb+1
+                +YtNJ0yVxmnEmjF1ahPFwr+a3YLwWq2NuMknoOQuYrW+qMwhypFpumWooXUA0M5owZIzQkTEaS07
+                PFVLeZSTLraTrtVeVX2eqQ+DwaW7OjGE+t3YjEfMDCmrPuTY8lmqkJlr/h0pN2IMUMqnNEoT4lIz
+                6X6FwuByZw5bu9mI0i5xXO3kSbEKb8PD5N2gz/NLx4HbDSedyTkcEcsIutFq5FQrPVxmr9l8ev+6
+                +sS95oEcHvDiRvPIfH25OgCOUk+LI2OKJ/wJ4O2CuFCbQtfo46Vj3FnJREf8fAATxEHM0iDFvqKo
+                qlPE+G2EKLLraOydoP/zA75zgQIDAQABMA0GCSqGSIb3DQEBCwUAA4IBAQAJCzV080tyRxLcwjls
+                Dm7krx0vNAJ1FPWka6CrssQ8YQ4Jrp6SS5273F3O9WQqRbbouPH38jrKKxXMKd1yKPFFLbFzvHgT
+                XPnS5bwxoM2sa3l4c3ytzUeVOsW5+AJbIPvzTMiWnps2RSKOeP4wePVWZYQeWaPPDmNEqE7/aGMY
+                AokoG/FUvhPaAeDwPCcbil+T1HVPqC8mEeL/iuXmt6UNUAnmATvdGHuRTOftuBHvhxUdGk7Rx5t0
+                ZT0wqx81DD8+yIV74Qor1hJrCgXg0AhvPqeUgSUDelSMfOaIyWkxEufmlfyeMG9IwR+mGkAMarGa
+                aqkDF45KDvWEyYb+Di+I
                 -----END CERTIFICATE-----
               Enable: true
               Default_Role: reader
