--- a/k8s/environments/prod/cluster-01-overlay/kustomization.yaml
+++ b/k8s/environments/prod/cluster-01-overlay/kustomization.yaml
@@ -9,6 +9,7 @@ bases:
 - ../../../namespaces/azure-devops
 - ../../../namespaces/admin/aad-pod-identity
 - ../../../namespaces/kube-system/aad-pod-identity
+- ../../../namespaces/neuvector
 # - ../../../release/admin/env-injector
 # - ../../../release/kube-system/nodelocaldns
 
@@ -31,3 +32,7 @@ patchesStrategicMerge:
 
 # mail-relay
 - ../../../release/mailrelay/mailrelay/patches/prod/cluster-01/mailrelay.yaml
+
+#neuvector patch
+- ../../../namespaces/neuvector/patches/prod/neuvector.yaml
+- ../../../namespaces/neuvector/patches/prod/cluster-00/neuvector.yaml
