--- a/k8s/environments/prod/common/neuvector/nv-storage-secret.yaml
+++ b/k8s/environments/prod/common/neuvector/nv-storage-secret.yaml
@@ -1,12 +1,11 @@
-apiVersion: ENC[AES256_GCM,data:cE8=,iv:0KdWRQ9TLKAR5xhXucllB4ni2eYJX8S6yF00SOFLA1Y=,tag:JY3arvA4kwe4AbxFXt97CQ==,type:str]
+apiVersion: ENC[AES256_GCM,data:lr0=,iv:I359nGuZMiAKmGE6kbQH7IqFjzLT7TTATYl4np3Oeu0=,tag:uNg7EXtT+nDBpiJVFy53Zg==,type:str]
 data:
-    azurestorageaccountkey: ENC[AES256_GCM,data:miN6BXaaVt5eSm/N5tecBjSHFx3/4pnesx8NfBJVTJJ0ZkPb3oPbC+7v+nVmXw04Fner+0yJXwHaKyF+NoQo/FFbmXtcAl0SElP5zfKS0M1S7DLdF24HUyBn10F7C0jTVCtLG9Rq9y/EbiH8clLQ3ISsXI2rtDr5,iv:SFzTaLG4QV6wd2PzRWt+lSzgwKqEl36mRkOUbibYWK8=,tag:WeUrmXNNEUUJtJ2OsbrS6Q==,type:str]
-    azurestorageaccountname: ENC[AES256_GCM,data:tbRkwJxQ+d6P6Php37cAAB8CdQixgIf4,iv:z7jrtRmxiWw+a1hYDX4FHuLewkbZGPXUl5JAuc7SxvE=,tag:46cJZKt/fpmC3Na8WyDmbA==,type:str]
-kind: ENC[AES256_GCM,data:AR+10GeK,iv:XKSqCaKQfaLpel1rP/gGt77z+VIaybuzZ/YtRmiJ4Y0=,tag:od6STQ8NdL8yCbbT+7X1nA==,type:str]
+    azurestorageaccountkey: ENC[AES256_GCM,data:kQbXI2+VOXVZ2mvR+Skhr8I1+d2lp8RlYXJNBojLHvSB0/Pp+hNQhLOnqEZgLlSupB2Lgzy1SKz/g8GaUF1hdMKsN5975jmTE28a/xXQRUssIeUHNJaIp9nlRWqIpIuk0HZMgzfYwo99fy6F7RFixMvc+9qlvuRv,iv:XshxmnNVWHA/7ZDnmm3A4pHBdYsb64r1uiZ17dfrTNo=,tag:ZeX5NbT76713IXMi5/umHA==,type:str]
+    azurestorageaccountname: ENC[AES256_GCM,data:/LowwtEO7wH2zRKzIJieJKjCr4d7uy0D,iv:yacU2MRD7Lru87ifZnd9dt5jaMPvOhykqc/lLynwozw=,tag:s1z9gz8oJn4IjeKFecd4sg==,type:str]
+kind: ENC[AES256_GCM,data:/zR1T5X5,iv:Ca2jj5nmFjIEoyApfnH57cuxi2Cy5ueQ5CLoAJI27vE=,tag:MCEwj+tOTpSFZ44aOe76UQ==,type:str]
 metadata:
-    creationTimestamp: null
-    name: ENC[AES256_GCM,data:YS1UzPD+0l14rMAGZHokohs=,iv:Gw4PRVH+W1TKcb4Ks8w5dP4FhJbfZTZzHeUFQsVEBIw=,tag:SHjJTjwliXoJBu6gsEsZvw==,type:str]
-    namespace: ENC[AES256_GCM,data:frdvfGjQNQN1,iv:GfArsaskAtJKrAwHeeb5S0YA8dSaP4LJ0N0v7LRImFI=,tag:PAbgAgniWsEkLA5sjLFztA==,type:str]
+    name: ENC[AES256_GCM,data:X2kAOeZlJMlDqJSMUzbW5Ag=,iv:l9me8sEDlGM0kIWqF/zW3DuWOdX6seQE9Un4J/KNSDk=,tag:qJpS4URfY9OV8B9EN85E6A==,type:str]
+    namespace: ENC[AES256_GCM,data:sM+Grx68HWOY,iv:zF8FpbCI9+Oz8WwsrRZlPxhvcBdc+njNoJ4FuMLkXds=,tag:enLg48lXhFuci2NonnvmfA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -14,10 +13,11 @@ sops:
     -   vault_url: https://dtssharedservicesprodkv.vault.azure.net
         name: sops-key
         version: 883d8b431ad345d09b2697c3aaae2a0c
-        created_at: '2021-02-17T15:29:49Z'
-        enc: dMkJPllNqB069VrYytLQDzgPozbei13MpWvI5Re_6kFzQq_hJISp2hFXsEFp0HzfzyOcynvdcYSnDFYPK-PVobp7MVPb_YSui44QkoIk6E6Sbiof5CkEZWG2IQ9y3QEBUDj2jYmf1ZYPDDd_sq8Cf-rl87JomZGcNcTrGpGzcdhxjOXhF3hJuq9Kj0ymN596-qP8F3_v2HPyaqIx2ejoeixBKdslbN4sGTWuDsldOEQYwbeeRBmWbcxiX0CHiYuGbuttoNPUwy56GPDI27XXXnm13t_kn_xa1syQgaLrPidQPbLqgWKbye6HX_VbVVyU_AB5SZ8duDDSMuulT5jnPQ
-    lastmodified: '2021-02-17T15:29:51Z'
-    mac: ENC[AES256_GCM,data:0MwGKS2CznNfIG4BCaedRiHQwGUrGJEuHtv0o232N62Ug6woWTVhQ85GkduAnIUeKfggumlnrXOFOoz4oMnbXTd6u9A8vBIeaUsmXbXKDGjyyNof4oBQxWLeaejfdcIqAyP6IKYp97pnoVjGi/54yIC29PqNcDQgtyPbT998bnM=,iv:k/byNLdLIMWfcmGDqjWQeV686BfyAUC4TTew0yF4bKw=,tag:D/opwBPyK57j6rfdrfGblA==,type:str]
+        created_at: '2021-03-01T19:50:06Z'
+        enc: MDiUxVWzxRBHyKAjXeTAO4SSlkqlo9k5Nv8qD5f0nu2oRkne3lmfiYkCxeqtno8Lflhmp0tUxzGAv6amMCkSrCmoo-jy4eLZK4A3VO726KrLSsf1_fiQnZsFiDhS20Qpx1wKVq8F5tqvNeJB8YG-1CS1jD4waB47jBukpdJjJtPUT_7vwXIC-GNAxNOq3iXggufPKpOoBWa8LOe3RTCTSKzuNHkU82HxC4PEZfzDokvQMkgX9RUl97GaugO01WwsbxDGEmL9ylWIz-aUFTY3fSSyV1uamjFKT5sf2Hcn22YWF_vNSqsp3EpeRZYJlFQcC7R3eZQO5vSlxY2kj9RjxA
+    hc_vault: []
+    lastmodified: '2021-03-01T19:50:07Z'
+    mac: ENC[AES256_GCM,data:ZKmtTXPOoGbAD6oFG40dKQcHhAWQAyilpyOtnhGk+DIvl2S8heoCN1LP6WNRSx06EyP2FjVNBhfoqkKgf8LEBaF8IF9CinhV6wFkgh23F8Z0MHOCbt0u47p0JLcP7eoSOlrGFFsgnzYNm7zVCea43Ct9uuQ4Yn1u0C40KoZiAKc=,iv:7Dm1JdbJvAWISYMd/XlXwTnmJAal7Y1ESIPTFNtD8UA=,tag:r2jwAiSGbakMCpbhRLQQlA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
-    version: 3.5.0
+    version: 3.6.1
