updated patch files

--- a/k8s/namespaces/neuvector/patches/prod/neuvector.yaml
+++ b/k8s/namespaces/neuvector/patches/prod/neuvector.yaml
@@ -8,11 +8,11 @@ spec:
   values:
     keyvault: 
       name: sdsneuvector
-      licensesecretname: neuvector-license-prod
+      licensesecretname: neuvector-license
     keyVaults:
       sdsneuvector:
         secrets:
           - neuvector-admin-password  
-          - neuvector-license-prod
+          - neuvector-license
           - neuvector-slack-webhook
           - neuvector-new-admin-password
