added missing env patch

--- a/k8s/environments/prod/cluster-00-overlay/kustomization.yaml
+++ b/k8s/environments/prod/cluster-00-overlay/kustomization.yaml
@@ -13,6 +13,11 @@ bases:
 # - ../../../release/admin/env-injector
 # - ../../../release/kube-system/nodelocaldns
 
+patches:
+  - path: ../prod-helmrelease.yaml
+    target:
+      kind: HelmRelease
+
 patchesStrategicMerge:
 
 #kube-slack patch
