--- a/k8s/environments/dev/cluster-01-overlay/kustomization.yaml
+++ b/k8s/environments/dev/cluster-01-overlay/kustomization.yaml
@@ -10,6 +10,7 @@ bases:
 - ../../../namespaces/admin/aad-pod-identity
 - ../../../namespaces/kube-system/aad-pod-identity
 - ../../../namespaces/neuvector
+- ../../../namespaces/monitoring/kube-prometheus-stack
 # - ../../../release/admin/env-injector
 # - ../../../release/kube-system/nodelocaldns
 
