cluster patches kustomize config and renaming

--- a/k8s/namespaces/monitoring/kube-prometheus-stack/patches/dev/cluster-00/kube-prometheus-stack.yaml
+++ b/k8s/namespaces/monitoring/kube-prometheus-stack/patches/dev/cluster-00/kube-prometheus-stack.yaml
@@ -24,11 +24,11 @@ spec:
           - name: "slack_alerting"
             slack_configs:
               - channel: prometheus-alerting
-                title: 'Dev-00 - {{ template "slack.default.title" . }}'
+                title: 'SDS-Dev-00 - {{ template "slack.default.title" . }}'
                 text: "{{ range .Alerts }}{{ .Annotations.message }}\n{{ end }}"
           - name: "slack_critical"
             slack_configs:
               - channel: prometheus-critical
-                title: 'Dev-00 - {{ template "slack.default.title" . }}'
+                title: 'SDS-Dev-00 - {{ template "slack.default.title" . }}'
                 text: "{{ range .Alerts }}{{ .Annotations.message }}\n{{ end }}"
           - name: "null"
