--- a/k8s/environments/dev/cluster-00-overlay/kustomization.yaml
+++ b/k8s/environments/dev/cluster-00-overlay/kustomization.yaml
@@ -42,3 +42,9 @@ patchesStrategicMerge:
 #neuvector patch
 - ../../../namespaces/neuvector/patches/nonprod/neuvector.yaml
 - ../../../namespaces/neuvector/patches/dev/cluster-00/neuvector.yaml
+
+# mail-relay
+- ../../../release/mailrelay/mailrelay/patches/dev/cluster-00/mailrelay.yaml
+
+# prom-operator patch
+- ../../../namespaces/monitoring/kube-prometheus-stack/patches/dev/cluster-00/kube-prometheus-stack.yaml
