--- a/k8s/environments/dev/cluster-01-overlay/kustomization.yaml
+++ b/k8s/environments/dev/cluster-01-overlay/kustomization.yaml
@@ -42,3 +42,6 @@ patchesStrategicMerge:
 #neuvector patch
 - ../../../namespaces/neuvector/patches/nonprod/neuvector.yaml
 - ../../../namespaces/neuvector/patches/dev/cluster-01/neuvector.yaml
+
+# prom-operator patch
+- ../../../namespaces/monitoring/kube-prometheus-stack/patches/dev/cluster-01/kube-prometheus-stack.yaml
