--- a/k8s/environments/dev/common-overlay/video-hearings/vh-azure-devops-agent/values.yaml
+++ b/k8s/environments/dev/common-overlay/video-hearings/vh-azure-devops-agent/values.yaml
@@ -23,11 +23,11 @@ cleanRun: false
 aadIdentity:
   name: vh-aad-identity
   type: "0"
-  resourceId: "/subscriptions/a8140a9e-f1b0-481f-a4de-09e2ee23f7ab/resourceGroups/managed-identities-sbox-rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/vh-infra-core-sbox-kvuser"
-  clientId: "5453c7c7-c40b-49b6-83ae-871a882a20d9"
+  resourceId: "/subscriptions/867a878b-cb68-4de5-9741-361ac9e178b6/resourceGroups/managed-identities-dev-rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/vh-infra-core-dev-kvuser"
+  clientId: "b9b83800-c0ea-4cc2-a13b-d14a28f57fbe"
 
 keyVaults:
-- name: vh-infra-core-sbox
+- name: vh-infra-core-dev
   tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
   secrets: 
   - azure-devops-agent-token
@@ -35,7 +35,7 @@ keyVaults:
 azureDevOps:
   url: "https://hmctsreform.visualstudio.com/"
   pool: "vh-sds"
-  agentName: "vh-azure-devops-agent"
+  agentName: "vh-azure-devops-agent-dev"
 
 env: {}
 
