--- a/k8s/namespaces/video-hearings/kustomization.yaml
+++ b/k8s/namespaces/video-hearings/kustomization.yaml
@@ -10,6 +10,7 @@ resources:
 #- vh-azure-devops-agent/vh-azure-devops-agent.yaml
 - vh-bookings-api/vh-bookings-api.yaml
 - vh-test-api/vh-test-api.yaml
+- vh-test-web/vh-test-web.yaml
 - vh-notification-api/vh-notification-api.yaml
 - vh-admin-web/vh-admin-web.yaml
 - vh-service-web/vh-service-web.yaml
