--- a/k8s/namespaces/video-hearings/vh-service-web/vh-service-web.yaml
+++ b/k8s/namespaces/video-hearings/vh-service-web/vh-service-web.yaml
@@ -12,4 +12,4 @@ spec:
   chart:
     git: git@github.com:hmcts/vh-service-web
     path: charts/vh-service-web
-    ref: VIH-7246-helm-chart
+    ref: VIH-7246-chart-setup
