--- a/k8s/environments/prod/cluster-00-overlay/kustomization.yaml
+++ b/k8s/environments/prod/cluster-00-overlay/kustomization.yaml
@@ -10,6 +10,7 @@ bases:
 - ../../../namespaces/admin/aad-pod-identity
 - ../../../namespaces/kube-system/aad-pod-identity
 - ../../../namespaces/neuvector
+- ../../../namespaces/monitoring/kube-prometheus-stack
 # - ../../../release/admin/env-injector
 # - ../../../release/kube-system/nodelocaldns
 
@@ -41,3 +42,6 @@ patchesStrategicMerge:
 #neuvector patch
 - ../../../namespaces/neuvector/patches/prod/neuvector.yaml
 - ../../../namespaces/neuvector/patches/prod/cluster-00/neuvector.yaml
+
+# prom-operator patch
+- ../../../namespaces/monitoring/kube-prometheus-stack/patches/prod/cluster-00/kube-prometheus-stack.yaml
